[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "runvenv"
authors = [
    {name = "Philipp Unger", email = "philipp.unger.1988@gmail.com"},
]
description = "run python scripts or modules in a venv with a single command"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/philippun1/runvenv"
Repository = "https://github.com/philippun1/runvenv"
"Bug Tracker" = "https://github.com/philippun1/runvenv/issues"


[project.scripts]
runvenv = "runvenv:main"

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"